<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Club Deportivo</string>
    <string name="club_nombre">CLUB DEPORTIVO</string>
    <string name="club_subtitulo">Sistema de gestión</string>
    <string name="pie_institucional">IFTS 29 · Grupo 5 · 2026</string>
    <string name="btn_ingreso_app">INGRESO A LA APP</string>
    <string name="desc_logo">Logo del Club Deportivo</string>
    <string name="desc_volver">Volver</string>
    <string name="login_titulo">INICIAR SESIÓN</string>
    <string name="login_perfil">PERFIL</string>
    <string name="perfil_empleado">EMPLEADO</string>
    <string name="perfil_socio">SOCIO</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_alias">Alias de socio</string>
    <string name="hint_clave">Contraseña</string>
    <string name="btn_ingresar">INGRESAR</string>
    <string name="menu_que_hacer">QUÉ NECESITÁS HACER</string>
    <string name="menu_registro">Registro de socio</string>
    <string name="menu_cobro">Cobro de cuota</string>
    <string name="menu_vencimientos">Ver vencimientos</string>
...
